Assessment generation: LCEL chain, structured output, quality review, retries
- Refactor to LCEL: RunnableSequence(step1 → routing → step2 → normalize) with
  RunnableLambda and withRetry on step1/step2
- Structured output: createChatCompletionWithStructuredOutput + Zod schemas for
  Step 1 (requirementsExtractionSchema), Step 2 (assessmentOutputSchema),
  and LLM review (assessmentReviewSchema)
- Retries: 3 parse/validation attempts per step with delay; LCEL withRetry(2)
- Quality review: rule-based (word count, sections, checklist, timeLimit, JD echo)
  then LLM (rules + quality + feasibility); one Step 2 retry with feedback on failure
- Prompts: strengthen timeLimit/DB rules; add PROMPT_ASSESSMENT_QUALITY_REVIEW
- Notebook: document review feedback and pipeline; align quality snapshot with server
- package-lock: resolve merge conflict, trim optional esbuild deps

Made-with: Cursor

--- a/notebooks/test-assessment-generation.ipynb
+++ b/notebooks/test-assessment-generation.ipynb
@@ -10,6 +10,9 @@
         "\n",
         "1. **Step 1 output** — Requirements extraction: inferred stack, level, confidence, summary, and key skills from the job description.\n",
         "2. **Final assessment** — The generated title, description, and time limit as candidates will see it.\n",
+        "3. **Review feedback** (if any) — After generation, a rule-based check and an LLM quality/feasibility review run. If issues remain after one retry, `reviewFeedback` is shown so you can see what failed (e.g. word count, sections, or feasibility).\n",
+        "\n",
+        "**Pipeline:** LCEL chain (Step 1 → routing → Step 2 → normalize) then rule-based review + LLM review; failed reviews trigger one retry with feedback before returning.\n",
         "\n",
         "**Setup:**\n",
         "1. Install Jupyter: `pip install jupyter` (if needed).\n",
@@ -22,30 +25,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Edit this job description and re-run the cell (and the one below) to see new output.\n",
         "JOB_DESCRIPTION = \"\"\"\n",
-        "Backend Engineer – Node.js\n",
-        "\n",
-        "We're looking for a backend engineer to build and maintain APIs and services.\n",
-        "\n",
-        "Requirements:\n",
-        "- 2+ years experience with Node.js and TypeScript\n",
-        "- Experience with REST APIs and relational databases (PostgreSQL)\n",
-        "- Familiarity with authentication (JWT, OAuth) and rate limiting\n",
-        "- Comfort with testing (unit and integration)\n",
-        "- Good communication and collaboration skills\n",
-        "\n",
-        "Nice to have: Redis, message queues, Docker/Kubernetes.\n",
+        "I am looking for a front end engineer skilled in React, Typescript, and Tailwind CSS.\n",
+        "They should be comfortable with building responsive web applications and have experience with state management libraries like Redux or Zustand.\n",
+        "They should also be familiar with version control systems like Git and have experience with testing frameworks like Jest.\n",
         "\"\"\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -123,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -132,11 +126,11 @@
               "\n",
               "    <div style=\"background:#F0FDF4; border:1px solid #86EFAC; padding:16px 20px; border-radius:12px; margin-bottom:16px;\">\n",
               "        <h3 style=\"margin:0 0 12px 0; font-size:1rem; color:#166534;\">Step 1 — Requirements extraction</h3>\n",
-              "        <p style=\"margin:0 0 8px 0; color:#15803D;\"><strong>Summary:</strong> Seeking a backend engineer to build and maintain APIs and services with a focus on Node.js and TypeScript.</p>\n",
-              "        <p style=\"margin:0 0 8px 0; color:#15803D;\"><strong>Stack:</strong> backend-node (confidence: high)</p>\n",
+              "        <p style=\"margin:0 0 8px 0; color:#15803D;\"><strong>Summary:</strong> Looking for a front end engineer skilled in React, Typescript, and Tailwind CSS, with experience in building responsive web applications and state management libraries.</p>\n",
+              "        <p style=\"margin:0 0 8px 0; color:#15803D;\"><strong>Stack:</strong> frontend-react (confidence: high)</p>\n",
               "        <p style=\"margin:0 0 8px 0; color:#15803D;\"><strong>Level:</strong> mid (confidence: medium)</p>\n",
-              "        <p style=\"margin:0 0 8px 0; color:#15803D;\"><strong>Key skills:</strong> Node.js, TypeScript, REST APIs, PostgreSQL, JWT, OAuth, unit testing, integration testing</p>\n",
-              "        <p style=\"margin:0; color:#15803D;\"><strong>Suggested scope:</strong> Build and maintain backend services and APIs.</p>\n",
+              "        <p style=\"margin:0 0 8px 0; color:#15803D;\"><strong>Key skills:</strong> React, Typescript, Tailwind CSS, Redux, Zustand, Git, Jest</p>\n",
+              "        <p style=\"margin:0; color:#15803D;\"><strong>Suggested scope:</strong> Focus on building responsive web applications using React and Typescript.</p>\n",
               "    </div>\n",
               "    "
             ],
@@ -187,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -195,9 +189,9 @@
             "text/html": [
               "\n",
               "    <div style=\"background:#1E3A8A; color:white; padding:24px 32px; border-radius:12px 12px 0 0; text-align:center;\">\n",
-              "        <h1 style=\"margin:0 0 4px 0; font-size:1.5rem;\">Build a Messaging API with Node.js and TypeScript</h1>\n",
+              "        <h1 style=\"margin:0 0 4px 0; font-size:1.5rem;\">Build a Responsive Note-Taking App with React</h1>\n",
               "        <p style=\"margin:0; color:#93C5FD;\">Technical Assessment</p>\n",
-              "        <p style=\"margin:8px 0 0 0; font-size:0.875rem; color:#BFDBFE;\">3 hours to complete</p>\n",
+              "        <p style=\"margin:8px 0 0 0; font-size:0.875rem; color:#BFDBFE;\">2 hours to complete</p>\n",
               "    </div>\n",
               "    <div style=\"border:1px solid #e5e7eb; border-top:none; padding:24px; border-radius:0 0 12px 12px; background:#fff; margin-bottom:16px;\">\n",
               "        <h2 style=\"font-size:1.125rem; margin:0 0 16px 0; color:#111;\">Project Instructions</h2>\n",
@@ -215,51 +209,51 @@
           "data": {
             "text/markdown": [
               "## Scenario\n",
-              "You are tasked with building a backend service for a messaging application called **ChatConnect**. This service will handle user accounts and message sending between users. The primary focus will be on creating a RESTful API that allows users to register, log in, and send messages to each other.\n",
+              "\n",
+              "You are tasked with building a **responsive note-taking application** called **NoteMaster**. This application will allow users to create, edit, and delete notes. Users should be able to manage their notes efficiently using a simple and clean interface. The application should be built using **React**, **TypeScript**, and **Tailwind CSS** to ensure a modern look and feel.\n",
               "\n",
               "## What you will build\n",
-              "You will develop a RESTful API that supports user registration, authentication, and sending messages between users. The API should be built using **Node.js** and **TypeScript** and should interact with a **PostgreSQL** database.\n",
+              "\n",
+              "You will deliver a single-page application that enables users to manage their notes. The core functionality includes creating, editing, and deleting notes, all while ensuring the application is responsive and user-friendly.\n",
               "\n",
               "## Requirements (must-have)\n",
-              "- Implement a user registration endpoint that accepts a username and password, validates the input, and stores the user in the database.\n",
-              "- Create a login endpoint that authenticates users using **JWT** for session management.\n",
-              "- Develop an endpoint to send messages between users, which should include sender ID, receiver ID, and message content.\n",
-              "- Ensure that all endpoints are secured and rate-limited to prevent abuse.\n",
-              "- Write unit and integration tests for the key functionalities of the API.\n",
+              "- The application must be built using **React** and **TypeScript**.\n",
+              "- Use **Tailwind CSS** for styling to ensure a modern and responsive design.\n",
+              "- Implement state management using either **Redux** or **Zustand** to manage the notes data.\n",
+              "- Users should be able to create a new note with a title and content.\n",
+              "- Users should be able to edit existing notes.\n",
+              "- Users should be able to delete notes.\n",
+              "- The application must be responsive and work well on both desktop and mobile devices.\n",
+              "- Include basic validation to ensure that notes cannot be created with empty titles or content.\n",
               "\n",
               "## Acceptance Criteria (definition of done)\n",
-              "- [ ] User can register with a unique username and password, receiving a success response.\n",
-              "- [ ] User can log in with valid credentials and receive a JWT token.\n",
-              "- [ ] User cannot register with an already taken username, receiving an appropriate error message.\n",
-              "- [ ] User can send a message to another user and receive a success response.\n",
-              "- [ ] User cannot send a message to themselves, receiving an appropriate error message.\n",
-              "- [ ] All endpoints are protected and require a valid JWT token for access.\n",
-              "- [ ] Rate limiting is implemented on all endpoints to restrict excessive requests.\n",
-              "- [ ] Unit tests cover user registration and login functionalities.\n",
-              "- [ ] Integration tests validate the message sending process between users.\n",
-              "- [ ] A README file is provided with setup instructions and API documentation.\n",
+              "- [ ] The application is built using **React** and **TypeScript**.\n",
+              "- [ ] The layout is styled using **Tailwind CSS**.\n",
+              "- [ ] Users can create a new note with a title and content.\n",
+              "- [ ] Users can edit existing notes.\n",
+              "- [ ] Users can delete notes.\n",
+              "- [ ] The application is fully responsive and works on desktop and mobile devices.\n",
+              "- [ ] Basic validation prevents empty notes from being created.\n",
+              "- [ ] State management is implemented using **Redux** or **Zustand**.\n",
+              "- [ ] The code is organized and follows best practices for component structure.\n",
+              "- [ ] A README file is included, explaining how to run the application.\n",
               "\n",
               "## Constraints\n",
-              "- The project must be implementable in a new, empty repository without any external API keys, cloud accounts, or paid services.\n",
-              "- Use an in-memory SQLite database for local development, with the option to switch to PostgreSQL for production.\n",
-              "- Do not implement any frontend components or real-time features such as WebSockets.\n",
+              "- The project should focus on the core functionality of managing notes; additional features like user authentication or advanced search are not required.\n",
+              "- Do not implement any external APIs; all data should be managed within the application.\n",
               "\n",
               "## Provided / Assumptions\n",
-              "- Candidate may create their own seed data or use in-memory data for testing.\n",
-              "- Authentication will be simplified using JWT and will not require third-party services.\n",
-              "- The candidate can assume familiarity with basic user authentication flows and REST API design.\n",
+              "- You may use in-memory data or a small seed script for initial notes; no external data or API keys are required.\n",
+              "- Candidates can assume basic knowledge of **React**, **TypeScript**, and **Tailwind CSS** without needing extensive documentation.\n",
               "\n",
               "## Deliverables\n",
-              "1. A complete Node.js application with TypeScript.\n",
-              "2. A PostgreSQL or SQLite database schema for users and messages.\n",
-              "3. A set of unit and integration tests.\n",
-              "4. A README file with instructions on how to run the application and use the API.\n",
+              "1. The complete source code of the application in a Git repository.\n",
+              "2. A README file with instructions on how to run the application.\n",
               "\n",
               "## Nice-to-haves (optional)\n",
-              "- Implement user profile management (e.g., updating user details).\n",
-              "- Add message retrieval functionality (fetching messages between users).\n",
-              "- Implement caching with Redis for message storage.\n",
-              "- Containerize the application using Docker."
+              "- Implement a dark mode toggle.\n",
+              "- Add a search functionality to filter notes by title.\n",
+              "- Include unit tests using **Jest** to ensure code reliability."
             ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
@@ -285,7 +279,7 @@
         "            <p style=\"margin:0; color:#B91C1C;\">The script could not produce a full assessment. Check that <code>server/config.env</code> has a valid API key (OPENAI_API_KEY, ANTHROPIC_API_KEY, or GEMINI_API_KEY) and run the cell above again. If running from repo root, ensure the script can load config (e.g. run from <code>server/</code> or use Node 20.6+ with <code>--env-file=config.env</code>).</p>\n",
         "        </div>\n",
         "        \"\"\"))\n",
-        "    # Show review feedback if present (from ENABLE_ASSESSMENT_REVIEW step)\n",
+        "    # Show review feedback if present (from rule-based or LLM quality review when issues remained after retry)\n",
         "    if assessment.get(\"reviewFeedback\"):\n",
         "        fb = assessment[\"reviewFeedback\"].replace(\"<\", \"&lt;\").replace(\">\", \"&gt;\").replace(\"\\\\n\", \"<br>\")\n",
         "        display(HTML(f\"\"\"\n",
@@ -323,7 +317,7 @@
         "---\n",
         "## How to judge quality\n",
         "\n",
-        "Use the **checklist** below (subjective) and the **Quality snapshot** in the next cell (objective checks from the prompt rules).\n",
+        "Use the **checklist** below (subjective) and the **Quality snapshot** in the next cell (objective checks that align with the server's rule-based review). The server also runs an LLM review for quality and feasibility; if that fails after one retry, you'll see **Quality check (review feedback)** above.\n",
         "\n",
         "**Checklist (subjective)**  \n",
         "- **Fit to role:** Does the scenario and tech stack match the job description?  \n",
@@ -335,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -355,7 +349,7 @@
         }
       ],
       "source": [
-        "# Quality snapshot (objective checks from prompt rules in server/src/prompts/index.ts)\n",
+        "# Quality snapshot (matches server rule-based review: server/src/services/assessmentGeneration.ts runQualityReview)\n",
         "import re\n",
         "\n",
         "if assessment is None:\n",
@@ -365,7 +359,8 @@
         "    title = assessment.get(\"title\", \"\")\n",
         "    time_limit = assessment.get(\"timeLimit\", 0)\n",
         "\n",
-        "    word_count = len(desc.split())\n",
+        "    # Same word count logic as server: trim then split on whitespace, count non-empty tokens\n",
+        "    word_count = len(desc.strip().split()) if desc else 0\n",
         "    sections = re.findall(r\"^##\\s+(.+)$\", desc, re.MULTILINE)\n",
         "    checklist_items = re.findall(r\"^\\s*-\\s*\\[\\s*\\]\", desc, re.MULTILINE)\n",
         "\n",
